--- a/api/package.json
+++ b/api/package.json
@@ -19,15 +19,14 @@
     "@types/node": "^22.15.21",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
@@ -36,6 +35,8 @@
     "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.27.0",
     "globals": "^16.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1"
   }
 }
