--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
+    "@types/ws": "^8.18.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
@@ -26,7 +27,8 @@
     "multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
