armazenando imagem em um banco de dados, formulario de criação de produto, requisição de criação de produto e slice de produto

--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,6 @@
 PRIVATEKEY=noooooooolapolitciaaanoooooo
 MONGODB=mongodb://root:1234@localhost:27017/api?authSource=admin
 PORT=3001
+CLOUD_NAME=dtm6iibm2
+CLOUD_API_KEY=322345956173795
+CLOUD_API_SECRET=ncx_fTy6T7T7d7p3-gEwmjJd49s
