login e registro, aprimoramento do schema de estabelecimento, e rotas para alteração em partes

--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
 PRIVATEKEY=noooooooolapolitciaaanoooooo
-MONGODB=mongodb://root:1234@localhost:27017/api?authSource=admin
+MONGODB=mongodb://mongo:uPAHGwFHdgSjvFNOdYjzkNcKEaHEJjxO@hopper.proxy.rlwy.net:54658
 PORT=3001
 CLOUD_NAME=dtm6iibm2
 CLOUD_API_KEY=322345956173795
