--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests",
     "dev": "nodemon src/index.ts",
     "build": "tsc"
   },
@@ -37,10 +37,13 @@
     "@eslint/js": "^9.27.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
+    "@types/jest": "^30.0.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.27.0",
     "globals": "^16.2.0",
+    "jest": "^30.0.0",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1"
